--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,21 +1,11 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/r7m3tor/Foocus/blob/main/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "8d6c56d3-f423-417c-b118-aef6e156037a",
+        "outputId": "34bd9b68-bea7-4de6-e7aa-301a5fbd6bbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -25,25 +15,26 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusparse-cu12 (/usr/local/lib/python3.11/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusparse-cu12 (/usr/local/lib/python3.11/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0mCollecting pygit2==1.12.2\n",
+            "Collecting pygit2==1.12.2\n",
             "  Downloading pygit2-1.12.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.5 kB)\n",
             "Requirement already satisfied: cffi>=1.9.1 in /usr/local/lib/python3.11/dist-packages (from pygit2==1.12.2) (1.17.1)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.9.1->pygit2==1.12.2) (2.22)\n",
             "Downloading pygit2-1.12.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m55.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusparse-cu12 (/usr/local/lib/python3.11/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0mInstalling collected packages: pygit2\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/4.9 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.5/4.9 MB\u001b[0m \u001b[31m13.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━\u001b[0m \u001b[32m3.6/4.9 MB\u001b[0m \u001b[31m50.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m55.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m37.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pygit2\n",
             "  Attempting uninstall: pygit2\n",
-            "\u001b[33m    WARNING: Ignoring invalid distribution ~vidia-cusparse-cu12 (/usr/local/lib/python3.11/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0m    Found existing installation: pygit2 1.15.1\n",
-            "    Uninstalling pygit2-1.15.1:\n",
-            "      Successfully uninstalled pygit2-1.15.1\n",
-            "\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusparse-cu12 (/usr/local/lib/python3.11/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0mSuccessfully installed pygit2-1.12.2\n",
+            "    Found existing installation: pygit2 1.17.0\n",
+            "    Uninstalling pygit2-1.17.0:\n",
+            "      Successfully uninstalled pygit2-1.17.0\n",
+            "Successfully installed pygit2-1.12.2\n",
             "/content\n",
-            "fatal: destination path 'Fooocus' already exists and is not an empty directory.\n",
+            "Cloning into 'Fooocus'...\n",
+            "remote: Enumerating objects: 6725, done.\u001b[K\n",
+            "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 6725 (delta 2), reused 0 (delta 0), pack-reused 6721 (from 3)\u001b[K\n",
+            "Receiving objects: 100% (6725/6725), 33.26 MiB | 20.34 MiB/s, done.\n",
+            "Resolving deltas: 100% (3878/3878), done.\n",
             "/content/Fooocus\n",
             "Already up-to-date\n",
             "Update succeeded.\n",
@@ -51,43 +42,7 @@
             "Python 3.11.11 (main, Dec  4 2024, 08:55:07) [GCC 11.4.0]\n",
             "Fooocus version: 2.5.5\n",
             "Error checking version for torchsde: No package metadata was found for torchsde\n",
-            "Installing requirements\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/lib/python3.11/subprocess.py\", line 1209, in communicate\n",
-            "    stdout, stderr = self._communicate(input, endtime, timeout)\n",
-            "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/lib/python3.11/subprocess.py\", line 2115, in _communicate\n",
-            "    ready = selector.select(timeout)\n",
-            "            ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/lib/python3.11/selectors.py\", line 415, in select\n",
-            "    fd_event_list = self._selector.poll(timeout)\n",
-            "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "KeyboardInterrupt\n",
-            "\n",
-            "During handling of the above exception, another exception occurred:\n",
-            "\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/Fooocus/entry_with_update.py\", line 46, in <module>\n",
-            "    from launch import *\n",
-            "  File \"/content/Fooocus/launch.py\", line 75, in <module>\n",
-            "    prepare_environment()\n",
-            "  File \"/content/Fooocus/launch.py\", line 57, in prepare_environment\n",
-            "    run_pip(f\"install -r \\\"{requirements_file}\\\"\", \"requirements\")\n",
-            "  File \"/content/Fooocus/modules/launch_util.py\", line 70, in run_pip\n",
-            "    return run(f'\"{python}\" -m pip {command} --prefer-binary{index_url_line}', desc=f\"Installing {desc}\",\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/Fooocus/modules/launch_util.py\", line 50, in run\n",
-            "    result = subprocess.run(**run_kwargs)\n",
-            "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/lib/python3.11/subprocess.py\", line 550, in run\n",
-            "    stdout, stderr = process.communicate(input, timeout=timeout)\n",
-            "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/lib/python3.11/subprocess.py\", line 1220, in communicate\n",
-            "    self._wait(timeout=sigint_timeout)\n",
-            "  File \"/usr/lib/python3.11/subprocess.py\", line 2047, in _wait\n",
-            "    time.sleep(delay)\n",
-            "KeyboardInterrupt\n",
-            "^C\n"
+            "Installing requirements\n"
           ]
         }
       ],
@@ -104,8 +59,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
